Fixed width alignment issue for preserve'd bookmarks

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -398,10 +398,8 @@ section {
       margin-right: 0; }
     .preserve_wrap #bookmarks a {
       display: block;
-      display: block;
       float: left;
-      margin-right: 2.35765%;
-      width: 48.82117%;
+      width: 50%;
       padding: 10px;
       border-bottom: none;
       background: rgba(255, 255, 255, 0.1);
@@ -409,12 +407,8 @@ section {
       height: 70px;
       overflow: hidden; }
       @media screen and (min-width: 480px) {
-        .preserve_wrap #bookmarks a:nth-child(2n) {
-          margin-right: 0; }
         .preserve_wrap #bookmarks a:nth-child(3n), .preserve_wrap #bookmarks a:nth-child(2) {
           background: rgba(255, 255, 255, 0.05); } }
-      .preserve_wrap #bookmarks a:last-child {
-        margin-right: 0; }
       .preserve_wrap #bookmarks a:hover, .preserve_wrap #bookmarks a:focus {
         background: rgba(255, 255, 255, 0.15); }
     @media screen and (max-width: 480px) {
